feat: comviz notebook

--- a/comviz/c4_yolo.ipynb
+++ b/comviz/c4_yolo.ipynb
@@ -11,6 +11,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "72282d55",
+   "metadata": {},
+   "source": [
+    "Download a mini COCO2017 for demonstration purposes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ee3760f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget https://raw.githubusercontent.com/mdaniyalk/workshop-datains-oct-2024/refs/heads/main/comviz/coco-class.yaml -O coco-class.yaml\n",
+    "\n",
+    "!wget https://huggingface.co/datasets/bryanbocao/coco_minitrain/resolve/main/coco_minitrain_25k.zip -O coco_minitrain_25k.zip\n",
+    "!unzip -q coco_minitrain_25k.zip -d ./COCO\n",
+    "!rm coco_minitrain_25k.zip"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9e51fa1d",
    "metadata": {},
    "source": [
