feat: add unet ds

--- a/comviz/c5_unet_model.ipynb
+++ b/comviz/c5_unet_model.ipynb
@@ -19,6 +19,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1567435e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!gdown --id \"1wwCQ1V_8kb7k-9tVQaLjd61kzjNv-9Gb\" --output train.zip\n",
+    "!unzip train.zip\n",
+    "!mv train/* unet-dataset/imgs/\n",
+    "!rm -d train\n",
+    "!rm train.zip\n",
+    "\n",
+    "!gdown --id \"1wsqXlueRqaTqYvO4PcyI01ryvXupTQR0\" --output train_masks.zip\n",
+    "!unzip train_masks.zip\n",
+    "!mv train_masks/* unet-dataset/masks/\n",
+    "!rm -d train_masks\n",
+    "!rm train_masks.zip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "05b2aa45",
    "metadata": {},
    "outputs": [],
@@ -471,11 +491,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the directory paths for images, masks, and model checkpoints.\n",
-    "# These paths are used to load the training images and their corresponding masks,\n",
-    "# as well as to save the model checkpoints during training.\n",
-    "dir_img = Path('./data/imgs/')  # Path to the directory containing input images\n",
-    "dir_mask = Path('./data/masks/')  # Path to the directory containing ground truth masks\n",
+    "dir_img = Path('./unet-dataset/imgs/')  # Path to the directory containing input images\n",
+    "dir_mask = Path('./unet-dataset/masks/')  # Path to the directory containing ground truth masks\n",
     "dir_checkpoint = Path('./checkpoints/')  # Path to the directory where model checkpoints will be saved"
    ]
   },
